--- a/phobos/std_log.html
+++ b/phobos/std_log.html
@@ -207,9 +207,7 @@ Implements an application level logging mechanism.
 <p></p>
 The std.<a name="log"></a><span class="ddoc_psymbol">log</span> module defines a set of functions useful for many common logging
 tasks. Five logging severity levels are defined. In the order of severity they
-<p></p>
-<b>are:</b><br>
-<span class="d_inlinecode">info</span>, <span class="d_inlinecode">warning</span>, <span class="d_inlinecode">error</span>, <span class="d_inlinecode">critical</span> and <span class="d_inlinecode">fatal</span>. Verbose
+are <span class="d_inlinecode">info</span>, <span class="d_inlinecode">warning</span>, <span class="d_inlinecode">error</span>, <span class="d_inlinecode">critical</span> and <span class="d_inlinecode">fatal</span>. Verbose
 messages are logged using the <span class="d_inlinecode">vlog</span> template.
 <p></p>
 
@@ -896,9 +894,7 @@ The parameter should either by <span class="d_inlinecode"><b>null</b></span> or 
 }
 </pre>
          The example above will log every log message to one file with the
-<p></p>
-<b>name:</b><br>
-(I [program].log.[datetime].[pid].<p></p>
+          name (I [program].log.[datetime].[pid].<p></p>
 
 </dd>
 <dt class="d_decl">@property string <a name="fileNameExtension"></a><span class="ddoc_psymbol">fileNameExtension</span>(string <i>extension</i>);
